# EGADSlite

./: CMakeLists.txt
